change headers and proxys